RIA-7509 Add mapping for individual dynamic list of each kind of each witness